--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,282 @@
 /* место для вашего кода */
+
+.header {
+  padding: 92px 50px 96px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  height: 293px;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+}
+
+.header__links-list {
+  display: flex;
+  width: 389px;
+  justify-content: space-between;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  text-underline-offset: 3px;
+}
+
+.header__logo {
+  display: block;
+  width: 138px;
+  height: 104px;
+  place-self: center;
+}
+
+.address {
+  display: block;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.37;
+  text-underline-offset: 5px;
+}
+
+.header__address {
+  max-width: 240px;
+  justify-self: end;
+}
+
+.cover {
+  position: relative;
+  z-index: 0;
+  color: white;
+  height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
+
+.cover__title {
+  font-size: 100px;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 157px 50px 97px;
+  line-height: 1.34;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.3em;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  place-self: center;
+}
+
+.aligned-text_right {
+  place-self: end;
+}
+
+.cover__description {
+  display: flex;
+  font-size: 22px;
+  padding: 0px 50px 50px;
+  text-transform: uppercase;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cover__description-text {
+  font-weight: 400;
+  word-spacing: 1.16rem;
+}
+
+.bet-button {
+  font-weight: 500;
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  color: white;
+  text-transform: uppercase;
+  border: 1px solid white;
+}
+
+.lots {
+  font-size: 20px;
+  padding: 180px 24px 60px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 0px 40px 27px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+  text-underline-offset: 4px;
+}
+
+.card {
+  position: relative;
+  z-index: 0;
+  color: white;
+  display: flex;
+  background-color: black;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card__film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card__book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card__painting {
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: underline solid white;
+  text-underline-offset: 3px;
+  padding: 48px 0px 0px;
+  width: 254px;
+}
+
+.card__text {
+  display: block;
+  padding: 0px 40px 48px;
+}
+
+.lots__look-more-link {
+  position: relative;
+  top: 30px;
+  padding: 0px 40px 2px;
+  text-underline-offset: 4px;
+}
+
+.about {
+  display: grid;
+  padding: 90px 24px 180px;
+  justify-items: center;
+  grid-template-columns: 334px auto;
+}
+
+.about__logo {
+  display: flex;
+  height: 240px;
+  width: 240px;
+  margin-top: 35px;
+  background-color: black;
+  justify-content: center;
+  border-radius: 120px;
+}
+
+.about__logo-image {
+  width: 148px;
+}
+
+.about__column {
+  margin: 134px 0 0 25px;
+}
+
+.about__title {
+  font-size: 40px;
+  padding-bottom: 101px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+}
+
+.paragraph-spacing {
+  padding-bottom: 24px;
+}
+
+.footer {
+  padding: 0 50px 82px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  font-size: 18px;
+  align-items: start;
+  justify-content: space-between;
+}
+
+.footer__address {
+  max-width: 264.573486328125px;
+  justify-self: start;
+}
+
+.footer__links-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__links-list-item {
+  list-style: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+  width: 240px;
+}
+
+.footer__social-list-item {
+  list-style: none;
+}
+
+.footer__link {
+  text-underline-offset: 4px;
+}
+
+.footer__social-icon {
+  width: 48px;
+}
