--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
   padding: 92px 50px 96px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  height: 293px;
   align-items: center;
   justify-content: space-between;
   font-size: 18px;
@@ -52,7 +51,7 @@
   position: relative;
   z-index: 0;
   color: white;
-  height: 757px;
+  min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
@@ -60,6 +59,8 @@
 
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -115,7 +116,7 @@
   background-color: transparent;
   color: white;
   text-transform: uppercase;
-  border: 1px solid white;
+  border: 1px solid currentColor;
 }
 
 .lots {
@@ -135,6 +136,7 @@
   flex-wrap: wrap;
   list-style: none;
   gap: 25px;
+  padding-bottom: 30px;
 }
 
 .lots__card-list-item {
@@ -153,24 +155,20 @@
   height: 100%;
   align-items: center;
   justify-content: space-between;
+  background-position: center;
+  background-size: cover;
 }
 
 .card__film {
   background-image: url(../images/card-lot-01.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card__book {
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card__painting {
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card-link {
@@ -193,8 +191,6 @@
 }
 
 .lots__look-more-link {
-  position: relative;
-  top: 30px;
   padding: 0px 40px 2px;
   text-underline-offset: 4px;
 }
