--- a/styles/style.css
+++ b/styles/style.css
@@ -197,7 +197,7 @@
 
 .about {
   display: grid;
-  padding: 90px 24px 180px;
+  padding: 60px 24px 180px;
   justify-items: center;
   grid-template-columns: 334px auto;
 }
@@ -218,6 +218,7 @@
 
 .about__column {
   margin: 134px 0 0 25px;
+  width: 688px;
 }
 
 .about__title {
